# DELNODEMOD

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: DeleteNodeModules.h
src/: DeleteNodeModules.c
